--- a/src/app/components/marketplace/marketplace.component.scss
+++ b/src/app/components/marketplace/marketplace.component.scss
@@ -15,4 +15,10 @@
     box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
   }
 
-  
+  #table{
+    justify-content: center; padding: 15px;background-color: aliceblue;
+  }
+
+  #table:hover{
+    background-color: bisque;
+  }
