--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,6 +72,11 @@ body {
   box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
+.container{
+  max-width: 90%;
+}
+
+
 .styledDisabled {
   max-width: 200px;
 
