--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -9,7 +9,7 @@
 
 
 
-    <div class="container">
+    <div class="container" style="margin-bottom: 100px; margin-top:25px">
         <div class="row" style="  justify-content: center; padding: 15px;background-color: aliceblue;border-bottom-style: double;">
             <div class="col-md-2">Icon</div>
             <div class="col-md-2">Project</div>
