--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -1,58 +1,82 @@
 <div class="center-div" style="display: grid;justify-items: center;margin-bottom: 20%;">
 
+    <h6 style="font-weight: bold; "><u>** View Your ART or Others!
+            **</u> </h6>
+
+    <div class="row" *ngIf="!viewDevilCatz && !viewFruitTown " style="justify-content: center;display: block;">
+
+        <button class="styled" (click)="toggleViewDevilCatz()">
+
+            Search DevilCatz
+
+        </button>
+        <br><br>
+        <button class="styled" style="max-width: fit-content;" (click)="toggleViewFtg()">
+
+            Search FruitTownGremlins.WtFruit
+        </button>
+    </div>
     <div class="card" style="border-radius: 5%; box-shadow: none;background: none; ">
-        <br>
-        <h6 style="font-weight: bold; "><u>** View Your Catz or Others!
-                **</u> </h6>
-                View STAKED CATZ by looking up $TOON contract address (0x61DED8A72cDc7762D159ab46bE880BE7127A2DeF)
-
-
-        <div class="row" style="justify-content: center;margin-top: 5%;margin-bottom: 5%;">
 
 
 
-            <div class="col-md">
-                <div id="card-lightblue" style="min-height: 100%;
+        <div *ngIf="viewFruitTown">viewFruitTown</div>
+
+
+        <div *ngIf="viewDevilCatz">
+            <p><button class="styled" (click)="clear()">
+
+                    Back
+                </button> <br>DevilCatz Lookup <br>View STAKED CATZ by looking up $TOON contract address
+                (0x61DED8A72cDc7762D159ab46bE880BE7127A2DeF)
+            </p>
+            <div class="row" style="justify-content: center;margin-bottom: 5%;">
+                <div class="col-md">
+                    <div id="card-lightblue" style="min-height: 100%;
                     max-width: 350px;
                     margin-left: auto;
                     margin-right: auto;
                     border: 1mm ridge pink;">
-                    <p>Eth Address</p>
-                    <p>Lookup</p>
-                    <mdb-form-control>
-                        <input mdbInput (ngModelChange)="updateSearchedAddress($event)" [ngModel]="searchedAddress"
-                            type="text" id="typeText" class="styled" style="border: 1mm ridge pink;" placeholder="Eth Address" /><br>
-                        <button mdbLabel (click)="searchByEthAddress()" class="styled" for="typeText">Search</button>
-                    </mdb-form-control>
+                        <p>Eth Address</p>
+                        <p>Lookup</p>
+                        <mdb-form-control>
+                            <input mdbInput (ngModelChange)="updateSearchedAddress($event)" [ngModel]="searchedAddress"
+                                type="text" id="typeText" class="styled" style="border: 1mm ridge pink;"
+                                placeholder="Eth Address" /><br>
+                            <button mdbLabel (click)="searchByEthAddress()" class="styled"
+                                for="typeText">Search</button>
+                        </mdb-form-control>
 
 
+                    </div>
                 </div>
-            </div>
-            &nbsp;
+                &nbsp;
 
-            <div class="col-md">
-                <div id="card-lightblue" style="min-height: 100%;
+                <div class="col-md">
+                    <div id="card-lightblue" style="min-height: 100%;
                     max-width: 350px;
                     margin-left: auto;
                     margin-right: auto;
                     border: 1mm ridge pink;">
-                    <p>DevilCat ID#</p>
-                    <p>Lookup</p>
-                    <mdb-form-control>
-                        <input mdbInput  (ngModelChange)="updateSearchedID($event)" [ngModel]="searchedId" type="number"
-                            min="0" max="2222" id="typeText" placeholder="DevilCatID#" class="styled" style="border: 1mm ridge pink;" /><br>
-                        <button (click)="searchById()" class="styled" for="typeText" >Search</button>
-                    </mdb-form-control>
+                        <p>DevilCat ID#</p>
+                        <p>Lookup</p>
+                        <mdb-form-control>
+                            <input mdbInput (ngModelChange)="updateSearchedID($event)" [ngModel]="searchedId"
+                                type="number" min="0" max="2222" id="typeText" placeholder="DevilCatID#" class="styled"
+                                style="border: 1mm ridge pink;" /><br>
+                            <button (click)="searchById()" class="styled" for="typeText">Search</button>
+                        </mdb-form-control>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
 
-    <!-- <div class="LoggedInView" *ngIf="searchedAddress">
-            LoggedInView
 
-        </div> -->
+    <div class="container" style="max-width: 90%;
+    justify-content: center;
+    justify-items: center;
+    display: grid;" *ngIf="viewDevilCatz">
 
     <!-- ETH ADDRESS LOOK UP RESULTS-->
     <div class="ByAddressView" *ngIf="tokenJsonArray.length >0"
@@ -136,6 +160,7 @@
             </table>
         </div>
     </div>
+</div>
 
 
 </div>
