--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -3,6 +3,11 @@
     <h6 style="font-weight: bold; "><u>** View Your ART or Others!
             **</u> </h6>
 
+
+
+    <!--
+        Select which one begin
+    -->
     <div class="row" *ngIf="!viewDevilCatz && !viewFruitTown " style="justify-content: center;display: block;">
 
         <button class="styled" (click)="toggleViewDevilCatz()">
@@ -16,9 +21,9 @@
             Search FruitTownGremlins.WtFruit
         </button>
     </div>
-    <div class="card" style="border-radius: 5%; box-shadow: none;background: none; ">
-
-
+    <!--
+        Select which one begin
+    -->
 
 
 
@@ -30,7 +35,12 @@
             <p><button class="styled" (click)="clear()">
 
                     Back
-                </button> <br>DevilCatz Lookup <br>View STAKED CATZ by looking up $TOON contract address
+                </button> <br>DevilCatz Lookup <br>
+                <img src="../../../assets/toonverse/multiBanner.png" alt="logo" height="50%" width="50%"
+                style=" margin-bottom: 20px;margin-top: 10px;" /><br>
+                
+                
+                View STAKED CATZ by looking up $TOON contract address
                 (0x61DED8A72cDc7762D159ab46bE880BE7127A2DeF)
             </p>
             <div class="row" style="justify-content: center;margin-bottom: 5%;">
@@ -74,92 +84,160 @@
             </div>
         </div>
 
+        <div class="container" style="max-width: 90%;
+        justify-content: center;
+        justify-items: center;
+        display: grid;" *ngIf="viewFruitTown">
+            <p><button class="styled" (click)="clear()">
+
+                    Back
+                </button> <br>FruitTownGremlins.WtFruit Lookup <br>
+                <img src="../../../assets/toonverse/fruitgremlins.wtf//ftgBanner2.png" alt="logo" height="50%" width="50%"
+                style=" margin-bottom: 20px;margin-top: 10px;" /><br>
+            </p>
+            <div class="row" style="justify-content: center;margin-bottom: 5%;">
+                <div class="col-md">
+                    <div id="card-lightblue" style="min-height: 100%;
+                    max-width: 350px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    border: 1mm ridge pink;">
+                        <p>Eth Address</p>
+                        <p>Lookup</p>
+                        <mdb-form-control>
+                            <input mdbInput (ngModelChange)="updateSearchedAddress($event)" [ngModel]="searchedAddress"
+                                type="text" id="typeText" class="styled" style="border: 1mm ridge pink;"
+                                placeholder="Eth Address" /><br>
+                            <button mdbLabel (click)="searchByEthAddressFTG()" class="styled"
+                                for="typeText">Search</button>
+                        </mdb-form-control>
 
 
-
-        <!-- ETH ADDRESS LOOK UP RESULTS-->
-        <div class="ByAddressView" *ngIf="tokenJsonArray.length >0"
-            style="max-width: 100%; width: 65%; margin-bottom: 10%;">
-
-            <br>
-
-            <button class="styled" (click)="clearCatObj()">Clear</button>
-            <br> <br>
-
-            <p>Unstaked DevilCatz belonging to {{searchedAddress}}...</p>
-
-            <div id="container" style="padding-bottom: 20%;">
-                <div class="row">
-                    <div class="col-md-3" id="card-lightblue-multi" *ngFor="let token of tokenJsonArray">
-                        <p>{{token.data.name}}</p>
-                        <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
-                            style="border-radius: 5%" />
-                        <br>
-                        <br>
-                        <a style="margin: 5px"
-                            href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{token.data.edition}}">
-                            <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh"
-                                width="25vw" style="border-radius: 5%" />
-                        </a>
-                        <a style="margin: 5px"
-                            href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{token.data.edition}}?tab=overview">
-                            <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh"
-                                width="25vw" style="border-radius: 5%" />
-                        </a>
-
-
-                        <br>
-                        <br>
                     </div>
+                </div>
+                &nbsp;
 
+                <div class="col-md">
+                    <div id="card-lightblue" style="min-height: 100%;
+                    max-width: 350px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    border: 1mm ridge pink;">
+                        <p>FTG ID#</p>
+                        <p>Lookup</p>
+                        <mdb-form-control>
+                            <input mdbInput (ngModelChange)="updateSearchedID($event)" [ngModel]="searchedId"
+                                type="number" min="0" max="2222" id="typeText" placeholder="DevilCatID#" class="styled"
+                                style="border: 1mm ridge pink;" /><br>
+                            <button (click)="searchByIdFTG()" class="styled" for="typeText">Search</button>
+                        </mdb-form-control>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    <div class="ByAddressView" *ngIf="tokenJsonArray.length >0"
+        style="max-width: 100%; width: 65%; margin-bottom: 10%;">
+
+        <br>
+
+        <button class="styled" (click)="clearnftObj()">Clear</button>
+        <br> <br>
+
+        <p>Unstaked DevilCatz belonging to {{searchedAddress}}...</p>
+
+        <div id="container" style="padding-bottom: 20%;">
+            <div class="row">
+                <div class="col-md-3" id="card-lightblue-multi" *ngFor="let token of tokenJsonArray">
+                    <p>{{token.data.name}}</p>
+                    <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
+                        style="border-radius: 5%" />
+                    <br>
+                    <br>
+         
+                    <a *ngIf="viewDevilCatz" style="margin: 5px"
+                    href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{token.data.edition}}">
+                    <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh"
+                        width="25vw" style="border-radius: 5%" />
+                </a>
+                    <a *ngIf="viewDevilCatz" style="margin: 5px"
+                        href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{token.data.edition}}?tab=overview">
+                        <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
+                            style="border-radius: 5%" />
+                    </a>
+                    <a *ngIf="viewFruitTown" style="margin: 5px"
+                    href="https://rarible.com/token/0xd2ebb721397c9278a5921741f9f53cef74beadf0:{{token.data.edition}}?tab=overview">
+                    <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
+                        style="border-radius: 5%" />
+                </a>
+                <a *ngIf="viewFruitTown" style="margin: 5px"
+                href="https://opensea.io/assets/ethereum/0xd2ebb721397c9278a5921741f9f53cef74beadf0/{{token.data.edition}}">
+                <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh"
+                    width="25vw" style="border-radius: 5%" />
+            </a>
+
+
+                    <br>
+                    <br>
                 </div>
 
             </div>
 
         </div>
 
-
-
-
-        <!-- GET BY CAT ID DIV -->
-        <div class="ByCatIDView" *ngIf="catObj!=null" style="max-width: 100%; width: 65%;margin-bottom: 10%;">
-            <br>
-            <button class="styled" (click)="clearCatObj()">Clear</button>
-            <br> <br>
-
-
-            <div id="card-lightblue" style="min-width: 75%;">
-                <p> {{catObj.data.name}}
-                    <br>
-                    <br>
-                    <img id="center-img" src={{catObj.data.image}} alt="logo" height="150vh" width="150vw"
-                        style="border-radius: 5%" />
-                    <br>
-                    <br>
-                    <a style="margin: 5px"
-                        href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{catObj.data.edition}}">
-                        <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh"
-                            width="25vw" style="border-radius: 5%" />
-                    </a>
-
-                    <a style="margin: 5px"
-                        href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{catObj.data.edition}}?tab=overview">
-                        <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
-                            style="border-radius: 5%" />
-                    </a>
-
-                <table id="styled" class="table" style="border-style:none">
-                    <tbody style="border-style:none" id="table-cat-attributes">
-
-                        <tr style="border-style:none" *ngFor="let attribute of catObj.data.attributes">
-                            {{attribute.trait_type}} : {{attribute.value}}
-                        </tr>
-
-                    </tbody>
-                </table>
-            </div>
-        </div>
     </div>
 
 
+
+
+    <div class="ByCatIDView" *ngIf="nftObj!=null" style="max-width: 100%; width: 65%;margin-bottom: 10%;">
+        <br>
+        <button class="styled" (click)="clearnftObj()">Clear</button>
+        <br> <br>
+
+
+        <div id="card-lightblue" style="min-width: 75%;">
+            <p> {{nftObj.data.name}}
+                <br>
+                <br>
+                <img id="center-img" src={{nftObj.data.image}} alt="logo" height="150vh" width="150vw"
+                    style="border-radius: 5%" />
+                <br>
+                <br>
+                <a *ngIf="viewDevilCatz" style="margin: 5px"
+                href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{nftObj.data.edition}}">
+                <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh"
+                    width="25vw" style="border-radius: 5%" />
+            </a>
+                <a *ngIf="viewDevilCatz" style="margin: 5px"
+                    href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{nftObj.data.edition}}?tab=overview">
+                    <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
+                        style="border-radius: 5%" />
+                </a>
+                <a *ngIf="viewFruitTown" style="margin: 5px"
+                href="https://rarible.com/token/0xd2ebb721397c9278a5921741f9f53cef74beadf0:{{nftObj.data.edition}}?tab=overview">
+                <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
+                    style="border-radius: 5%" />
+            </a>
+            <a *ngIf="viewFruitTown" style="margin: 5px"
+            href="https://opensea.io/assets/ethereum/0xd2ebb721397c9278a5921741f9f53cef74beadf0/{{nftObj.data.edition}}">
+            <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh"
+                width="25vw" style="border-radius: 5%" />
+        </a>
+                
+
+
+
+            <table id="styled" class="table" style="border-style:none">
+                <tbody style="border-style:none" id="table-cat-attributes">
+
+                    <tr style="border-style:none" *ngFor="let attribute of nftObj.data.attributes">
+                        {{attribute.trait_type}} : {{attribute.value}}
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
