--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -10,7 +10,8 @@
 
 
     <div class="container" style="margin-bottom: 100px; margin-top:25px">
-        <div class="row" style="  justify-content: center; padding: 15px;background-color: aliceblue;border-bottom-style: double;">
+        <div class="row"
+            style="  justify-content: center; padding: 15px;background-color: aliceblue;border-bottom-style: double;">
             <div class="col-md-2">Icon</div>
             <div class="col-md-2">Project</div>
             <div class="col-md-2">Status</div>
@@ -28,7 +29,9 @@
             <div class="col-md-2">
 
                 <div class="ms-3">
-                    <p class="fw-bold mb-1">Devil Catz</p>
+                    <p> <a href="https://opensea.io/collection/toonversestudios" class="fw-bold mb-1">Devil Catz</a>
+                    </p>
+
                 </div>
             </div>
 
@@ -59,7 +62,15 @@
             </div>
             <div class="col-md-2">
 
-                <p class="fw-bold mb-1">Fruit Town Gremlins</p>
+
+                <!-- <a style="margin: 5px" href="https://rarible.com/collection/0xd2ebb721397c9278a5921741f9f53cef74beadf0/items">
+                    <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
+                        style="border-radius: 5%" />
+                </a> -->
+                <p>
+                <a href="https://opensea.io/collection/fruittowngremlins-wtfruit" class="fw-bold mb-1">Fruit Town
+                    Gremlins</a>
+                </p>
 
             </div>
 
