--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -92,7 +92,7 @@
 
                     Back
                 </button> <br>FruitTownGremlins.WtFruit Lookup <br>
-                <img src="../../../assets/toonverse/fruitgremlins.wtf//ftgBanner2.png" alt="logo" height="50%" width="50%"
+                <img src="../../../assets/toonverse/fruitgremlins.wtf/ftgBanner2.png" alt="logo" height="50%" width="50%"
                 style=" margin-bottom: 20px;margin-top: 10px;" /><br>
             </p>
             <div class="row" style="justify-content: center;margin-bottom: 5%;">
