Buy toon component made.

--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -1,6 +1,9 @@
 <div class="center-div" style=" display: inline list-item;
 ">
     <h6 style="font-weight: bold; "><u>**ToonVerse Marketplace**</u> </h6>
+    The location for future mints and the ability to purchase ownership of entire collections, control the ownership
+    control the opensea | etherscan | rarible | royalties| etc.
+
 
 
 
@@ -12,6 +15,7 @@
     <div class="container" style="margin-bottom: 100px; margin-top:25px">
         <div class="row"
             style="  justify-content: center; padding: 15px;background-color: aliceblue;border-bottom-style: double;">
+            <div class="col-md-2">Price</div>
             <div class="col-md-2">Icon</div>
             <div class="col-md-2">Project</div>
             <div class="col-md-2">Status</div>
@@ -19,6 +23,9 @@
             <div class="col-md-2">Link</div>
         </div>
         <div class="row" id="table">
+            <div class="col-md-2">
+                Not for sale
+            </div>
 
             <div class="col-md-2">
 
@@ -56,6 +63,10 @@
         <div class="row" id="table">
 
             <div class="col-md-2">
+                50 ETH
+            </div>
+
+            <div class="col-md-2">
                 <img src="../../../assets/toonverse/fruitgremlins.wtf/ftgbanner.png" class="rounded-circle" alt=""
                     style="width: 45px; height: 45px" />
 
@@ -68,8 +79,8 @@
                         style="border-radius: 5%" />
                 </a> -->
                 <p>
-                <a href="https://opensea.io/collection/fruittowngremlins-wtfruit" class="fw-bold mb-1">Fruit Town
-                    Gremlins</a>
+                    <a href="https://opensea.io/collection/fruittowngremlins-wtfruit" class="fw-bold mb-1">Fruit Town
+                        Gremlins</a>
                 </p>
 
             </div>
@@ -77,7 +88,7 @@
             <div class="col-md-2">
 
 
-                <span class="badge badge-primary rounded-pill d-inline">Minting Now</span>
+                <span class="badge badge-success rounded-pill d-inline">SOLD OUT</span>
             </div>
             <div class="col-md-2">
 
@@ -85,16 +96,19 @@
             </div>
 
             <div class="col-md-2">
+                <a href="https://opensea.io/collection/fruittowngremlins-wtfruit" class="fw-bold mb-1">
+                    <button id="styled-mint-button">
+                        SOLD OUT
+                    </button></a>
 
-                <button [routerLink]="['/fruittown']" id="styled-mint-button">
-                    Mint
-                </button>
             </div>
 
         </div>
 
         <div class="row" id="table">
+            <div class="col-md-2">
 
+                TDB</div>
             <div class="col-md-2">
 
                 <img src="../../../assets/toonverse/tanggang/tangGang.png" class="rounded-circle" alt=""
@@ -123,7 +137,9 @@
 
         </div>
         <div class="row" id="table">
+            <div class="col-md-2">
 
+                TDB</div>
             <div class="col-md-2">
 
                 <img src="../../../assets/toonverse/clouds/Music.png" class="rounded-circle" alt=""
@@ -156,7 +172,9 @@
 
 
         <div class="row" id="table">
+            <div class="col-md-2">
 
+                TDB</div>
             <div class="col-md-2">
 
                 <img src="../../../assets/toonverse/sourpuss/main.png" class="rounded-circle" alt=""
@@ -185,7 +203,9 @@
 
         </div>
         <div class="row" id="table">
+            <div class="col-md-2">
 
+                TDB</div>
             <div class="col-md-2">
 
                 <img src="../../../assets/toonverse/redFront.png" class="rounded-circle" alt=""
