--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -44,7 +44,7 @@
         </li>
 
         <li class="nav-item">
-          <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/buytoon']">Buy $Toon</p>
+          <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/buytoon']">Buy $TOON</p>
         </li>
 
 
